--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="music.css">
 </head>
 <body>
-<div class="container">
+<div class="container"> 
     <div class="heading">Music Gallery</div>
+    <div class="music-container">
     <div class="box">
         <div class="image">
             <img src="grenade.jpg" alt="">
@@ -53,6 +54,7 @@
         <div class="music">
             <audio src="Wanna Be.mp3" controls></audio>
         </div>
+    </div>
     </div>
 </div>
 </body>
